# Origin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  demo.sh  demo_tui.py  pyproject.toml  requirements.txt
.github/issue_template/: adapter_request.md
.github/workflows/: origin-context-bot.yml  origin-doctor.yml  origin-pr-comment.yml
.origin/: ORIGIN.md  config.yaml  decisions.md  memory.md  workspace.db
.origin/decisions/: dec_01KXX2BCK9WX53SD5A6SKWJYKK.yaml
.origin/timeline/: evt_01KXX2BCMYZ53TPAR139JC2P22.yaml  evt_01KXX2JQTMQB6Q1EAW20742C5P.yaml
docs/adr/: 0001-single-artifact-store.md
src/origin/: config.py  exceptions.py
src/origin/adapters/: flat_file.py
src/origin/application/: use_cases.py
src/origin/domain/: context.py  models.py  secrets.py  ulid.py
src/origin/infrastructure/: database.py  git.py  mirror.py
src/origin/presentation/: cli.py  mcp_server.py  theme.tcss  tui.py
src/origin/templates/: base.html  decision_detail.html  decisions.html  index.html  knowledge.html  timeline.html
tests/: conftest.py  test_blame.py  test_build_site.py  test_cli.py  test_database.py  test_domain.py  test_flat_file_snapshots.py  test_git.py  test_mcp_server.py  test_mirror_snapshots.py  test_scaling.py  test_secrets.py  test_tui.py  test_tui_snapshots.py  test_use_cases.py  test_v2.py
tests/snapshots/: claude_md_golden.md  context_golden.md  decisions_golden.md  memory_golden.md
