[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-cli"
version = "2.0.0"
description = "A local-first, git-friendly persistent memory layer for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Deepmind Advanced Agentic Coding Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "rich>=13.0",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
origin = "origin.presentation.cli:main"
origin-mcp = "origin.presentation.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
